<resources>
    <string name="app_name">course</string>
    <string name="str1">hello world!</string>
    <string name="text_view">Result</string>
    <string name="btn_label">turn to F</string>
    <string name="txt_hint">Please input temp:(only number)</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB:</string>
    <string name="btn_opencfg_label" translatable="false">config</string>
    <string name="btn_save_label">save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="rdo_home_label">Home</string>
    <string name="rdo_func_label">Func</string>
    <string name="rdo_setting_label">Setting</string>

</resources>
