<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FrameActivity"
    tools:ignore="InvalidId">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.demo.hello.kwq.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_func"
        android:name="com.demo.hello.kwq.FuncFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <fragment
        android:id="@+id/fragment_setting"
        android:name="com.demo.hello.kwq.SettingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <RadioGroup
        android:id="@+id/bottomGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            android:drawableTop="@mipmap/home"
            style="@style/rg_btn_style"
            android:text="@string/rdo_home_label" />

        <RadioButton
            android:id="@+id/radioFunc"
            android:drawableTop="@mipmap/func"
            style="@style/rg_btn_style"
            android:text="@string/rdo_func_label" />

        <RadioButton
            android:id="@+id/radioSetting"
            android:drawableTop="@mipmap/settings"
            style="@style/rg_btn_style"
            android:text="@string/rdo_setting_label" />
    </RadioGroup>
</LinearLayout>